# CarsSimulation

./: CMakeLists.txt
Backend/: Random.h  main.cpp
Backend/Cars/: Car.h  CarSettings.h  Cars.h
Backend/Process/: CreateCars.h  CreatingCars.h
Backend/TrafficLight/: Light.h  LightSettings.h  TrafficLight.h
Backend/UserSettings/: UserCarSettings.h  UserLightSettings.h
Backend/src/: Random.cpp
Backend/src/Cars/: Car.cpp  Cars.cpp  CreateCars.cpp  CreatingCars.cpp
Backend/src/TrafficLight/: Light.cpp  TrafficLight.cpp
Backend/src/UserSettings/: UserCarSettings.cpp  UserLightSettings.cpp
